fixed z-index on header

--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,7 @@ button {
   width: 100%;
   background-color: #22211f;
   color: #fefcf8;
+  z-index: 100;
 }
 .header-sticky {
   position: fixed;
